manifests/fleet-idp/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: idp-ingress
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - idp.dev.chorogra.me
    secretName: idp-tls-cert
  rules:
  - host: idp.dev.chorogra.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: idp-service
            port:
              number: 7007
